--- a/src/assets/scss/all.scss
+++ b/src/assets/scss/all.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&family=Noto+Serif+TC:wght@200;300;400;500;600;700;900&display=swap');
+@import "https://fonts.googleapis.com/icon?family=Material+Icons";
 
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
