:triangular_flag_on_post: Update: component update

--- a/src/assets/scss/base/_base.scss
+++ b/src/assets/scss/base/_base.scss
@@ -3,7 +3,7 @@ body{
 }
 
 h1, h2, h3, h4, h5, h6, p, span, a, button, ul, ol, li{
-  @apply leading-[1.2] font-normal
+  @apply leading-[1.2] font-[400]
 }
 
 p{
