--- a/src/assets/scss/all.scss
+++ b/src/assets/scss/all.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&family=Noto+Serif+TC:wght@200;300;400;500;600;700;900&display=swap');
 @import "https://fonts.googleapis.com/icon?family=Material+Icons";
+@import 'https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200';
 
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
@@ -9,3 +10,4 @@
 @import './base/base';
 @import './components/button';
 @import './components/form';
+@import './components/swiper';
