--- a/src/assets/scss/components/_swiper.scss
+++ b/src/assets/scss/components/_swiper.scss
@@ -16,3 +16,28 @@
     background: #BF9D7D;
   }
 }
+
+.swiper-button-prev {
+  width: 56px !important;
+  height: 56px !important;
+  border-radius: 28px;
+  background: white!important;
+  margin-left: 0px !important;
+  &::after {
+    color: #4B4B4B !important;
+    font-size: 16px !important;
+    font-weight: bold;
+  }
+}
+.swiper-button-next {
+  width: 56px !important;
+  height: 56px !important;
+  border-radius: 28px;
+  background: white!important;
+  margin-right: 0px !important;
+  &::after {
+    color: #4B4B4B !important;
+    font-size: 16px !important;
+    font-weight: bold;
+  }
+}
