:triangular_flag_on_post: Update: orderRoom view and components upate

--- a/src/assets/scss/base/_base.scss
+++ b/src/assets/scss/base/_base.scss
@@ -2,7 +2,7 @@ body{
   @apply font-noto-serif-tc text-neutral-100
 }
 
-h1, h2, h3, h4, h5, h6, span, a, button, ul, ol, li{
+h1, h2, h3, h4, h5, h6, span, a, button {
   @apply leading-[1.2] font-bold
 }
 
