--- a/src/assets/scss/base/_helper.scss
+++ b/src/assets/scss/base/_helper.scss
@@ -22,6 +22,9 @@ $neutral-60 : '#909090';
 $neutral-40 : '#ECECEC';
 $neutral-10 : '#F9F9F9';
 
+.container-main{
+  @apply container mx-auto px-4 xl:px-0
+}
 
 .title-deco {
   position: relative;
