--- a/src/assets/scss/all.scss
+++ b/src/assets/scss/all.scss
@@ -11,4 +11,4 @@
 @import './components/button';
 @import './components/form';
 @import './components/swiper';
-@import './components/datepicker';
+@import './components/calendar';
