:triangular_flag_on_post: Update: bookingView's components update

--- a/src/assets/scss/base/_base.scss
+++ b/src/assets/scss/base/_base.scss
@@ -17,3 +17,9 @@ ul, ol, li {
 p{
   @apply leading-normal tracking-[0.02rem]
 }
+
+select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
