:triangular_flag_on_post: Update: HomeView components update

--- a/src/assets/scss/components/_swiper.scss
+++ b/src/assets/scss/components/_swiper.scss
@@ -1,9 +1,6 @@
-// home-banner
-// home-rooms
-// hoem-culinary 佳餚美饌
-
 .home-banner,
-.room-list-swiper {
+.room-list-swiper,
+.home-room-swiper-content {
   .swiper-pagination-bullet{
     width: 32px;
     border-radius: 2px;
