:triangular_flag_on_post: Update: room admin update

--- a/src/style/components/_form.scss
+++ b/src/style/components/_form.scss
@@ -40,6 +40,7 @@ input[type="checkbox"]+span {
   align-items: center;
   width: 16px;
   height: 16px;
+  border: 1px solid #E1D1C2;
   border-radius: 4px;
   background: #fff;
   user-select: none;
