--- a/src/style/components/_form.scss
+++ b/src/style/components/_form.scss
@@ -24,7 +24,7 @@ label {
     position: absolute;
     right: 20px;
     top: 41%;
-    background: url('/public/svg/arrow-down.svg') no-repeat center;
+    background: url('/svg/arrow-down.svg') no-repeat center;
     pointer-events: none;
   }
 }
